--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/services/server.js"></script>
         <script src="scripts/directives/header.js"></script>
+        <script src="scripts/directives/searchsubreddit.js"></script>
         <!-- endbuild -->
 </body>
 </html>
