--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <div search-subreddit></div>
   <body ng-app="cleverGullApp">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -32,10 +31,10 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-
+            
             <a class="navbar-brand" href="#/">cleverGull</a>
           </div>
-
+          
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
@@ -49,6 +48,9 @@
     </div>
 
     <div class="container">
+    <div class="row">
+      <div class="col-sm-4" search-subreddit></div>
+    </div>  
     <div ng-view=""></div>
     </div>
 
