--- a/app/index.html
+++ b/app/index.html
@@ -47,18 +47,21 @@
       </div>
     </div>
 
-    <div class="container">
-    <div class="row">
-      <div class="col-sm-4" search-subreddit></div>
-    </div>  
-    <div ng-view=""></div>
+    <div class="container col-lg-12">
+      <div class="row">
+        <div class="col-lg-3" search-subreddit></div>
+      </div>  
+      <div class="row">
+        <div class="col-lg-12" ng-view=""></div>
+      </div>
+      
     </div>
 
-    <div class="footer">
+<!--     <div class="footer">
       <div class="container">
         <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
       </div>
-    </div>
+    </div> -->
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
